[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Golem.png" type="Texture" id=1]
[ext_resource path="res://UI/Images/HomeUnpressed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=4]
[ext_resource path="res://PressStart2P_8.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Images/Left.png" type="Texture" id=6]
[ext_resource path="res://UI/Images/QuitPressed.png" type="Texture" id=7]
[ext_resource path="res://UI/Images/BackUnpressed.png" type="Texture" id=8]
[ext_resource path="res://UI/Images/Right.png" type="Texture" id=9]
[ext_resource path="res://UI/Images/BackPressed.png" type="Texture" id=10]
[ext_resource path="res://UI/Images/QuitUnpressed.png" type="Texture" id=11]
[ext_resource path="res://UI/Images/HomePressed.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "UI_fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Settings" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.14902, 0.192157, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -7.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 300.0
margin_bottom = 163.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="LeftButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 125.0
margin_bottom = 58.0
icon = ExtResource( 6 )
flat = true

[node name="Sprite" type="Sprite" parent="MarginContainer/VBoxContainer/HBoxContainer"]
position = Vector2( 150.528, 27.5855 )
texture = ExtResource( 1 )
hframes = 31

[node name="RightButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 219.0
margin_bottom = 58.0
icon = ExtResource( 9 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 131.0
rect_min_size = Vector2( 280, 73 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SFX2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
margin_top = 13.0
margin_right = 72.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "SFX      "
align = 1

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
margin_left = 76.0
margin_right = 300.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 6.0
value = -10.0

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 300.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Music2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
margin_top = 13.0
margin_right = 72.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "Music    "
align = 1

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
margin_left = 76.0
margin_right = 300.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -24.0
max_value = 6.0
value = -10.0

[node name="JoystickSize" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 48.0
margin_right = 300.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Joystick2" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/JoystickSize"]
margin_top = 7.0
margin_right = 72.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 5 )
text = "Joystick "
align = 1

[node name="Joystick" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/JoystickSize"]
margin_left = 76.0
margin_right = 300.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.2
max_value = 1.2
step = 0.0
value = 0.2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 300.0
margin_bottom = 163.0
size_flags_horizontal = 3
custom_constants/separation = 92
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 38.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 10 )
stretch_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 168.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 1

[node name="Home" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2"]
margin_left = 3.0
margin_right = 35.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 12 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 260.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 3
alignment = 2

[node name="Quit" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3"]
margin_left = 8.0
margin_right = 40.0
margin_bottom = 32.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 7 )

[node name="Black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/UI_fade = SubResource( 1 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/SFX/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/Music/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/JoystickSize/Joystick" to="." method="_on_Joystick_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer2/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer3/Quit" to="." method="_on_Quit_pressed"]
